--- a/apps/index.html
+++ b/apps/index.html
@@ -5,8 +5,8 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="author" content="">
-<meta name="description" content="These are the ideas and implementations of applications, either for mobile or desktop that i am working on." />
-<meta name="keywords" content="blog, game, developer, dev" />
+<meta name="description" content="untitled-api" />
+<meta name="keywords" content="blog, game, developer, dev, apps, development" />
 <meta name="robots" content="noodp" />
 <meta name="theme-color" content="" />
 <link rel="canonical" href="https://www.phireheavyindustries.com/apps/" />
@@ -115,7 +115,7 @@
         <h1>Apps</h1>
 
         
-            <div class="content"><p>These are the ideas and implementations of applications, either for mobile or desktop that i am working on.</p>
+            <div class="content"><p><a href="untitled-api">untitled-api</a></p>
 </div>
         
 
