--- a/search/index.html
+++ b/search/index.html
@@ -11,7 +11,9 @@
 <meta property='og:site_name' content='phire heavy industries'>
 <meta property='og:type' content='article'><meta property='article:section' content='Page' />
 <meta name="twitter:title" content="Search">
-<meta name="twitter:description" content=""><link rel="alternate" type="application/json" href="https://www.phireheavyindustries.com%22/search/index.json"><link rel="preload" href="https://www.phireheavyindustries.com%22/search/index.json" as="fetch" crossorigin="anonymous">
+<meta name="twitter:description" content=""><link rel="alternate" type="application/json" href="https://www.phireheavyindustries.com%22/search/index.json">
+
+<link rel="preload" href="https://www.phireheavyindustries.com%22/search/index.json" as="fetch" crossorigin="anonymous">
     </head>
     <body class="template-search">
     <script>
