--- a/p/how-i-work-i-2024/index.html
+++ b/p/how-i-work-i-2024/index.html
@@ -375,7 +375,7 @@
     <section class="article-content">
     
     
-    <p>Almost 2 years to the date i update this post with what is my current setup.</p>
+    <p>Almost 2 years to the day i update this post with what is my current setup.</p>
 <h4 id="hardware">Hardware</h4>
 <p>I have replaced the <a class="link" href="https://www.lenovo.com/pt/pt/laptops/thinkpad/t-series/t430s/]"  target="_blank" rel="noopener"
     >Lenovo Thinkpad T430s</a> with a <a class="link" href="https://www.lenovo.com/pt/pt/p/laptops/thinkbook/thinkbook-series/lenovo-thinkbook-14-g2-itl/xxtbxtmi400"  target="_blank" rel="noopener"
